Added test for `SQLBuilder::nameQuote`
Also some minor code cleanup in unit test code